# StockSage

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  walkthrough.md
.github/: CODEOWNERS  FUNDING.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: branch-name.yml  ci.yml  codeql.yml  docs.yml  labels.yml  release.yml  semantic-pr.yml
architecture/: index.html
changelog/: index.html
code-of-conduct/: index.html
contributing/: index.html
data/AAPL/: company_info.csv  daily.csv  earnings_dates.csv  google_trends.csv  historical_prices.csv  insider_transactions.csv  institutional_holders.csv  major_holders.csv  news.csv  quarterly_cash_flow.csv  recommendations.csv  sector_index.csv
data/COLPAL.NS/: balance_sheet.csv  cash_flow.csv  company_info.csv  daily.csv  dividends.csv  earnings_dates.csv  income_statement.csv  major_holders.csv  market_index.csv  news.csv  quarterly_balance_sheet.csv  quarterly_income_statement.csv  recommendations.csv  splits.csv
data/GOOGL/: company_info.csv  daily.csv  earnings_dates.csv  google_trends.csv  insider_transactions.csv  institutional_holders.csv  major_holders.csv  market_index.csv  news.csv  quarterly_balance_sheet.csv  quarterly_income_statement.csv  recommendations.csv  sector_index.csv  splits.csv
data/SAFARI.NS/: balance_sheet.csv  cash_flow.csv  company_info.csv  daily.csv  dividends.csv  earnings_dates.csv  google_trends.csv  income_statement.csv  insider_transactions.csv  major_holders.csv  news.csv  quarterly_balance_sheet.csv  quarterly_income_statement.csv  recommendations.csv  splits.csv
docs/: architecture.md  history-rewrite-checklist.md  index.md  local-setup.md  model-providers.md  oss-launch-checklist.md  self-host.md  stream-api.md
docs/examples/: crew-output-guide.md  output-preview.md
examples/crew-output-guide/: index.html
examples/output-preview/: index.html
history-rewrite-checklist/: index.html
local-setup/: index.html
model-providers/: index.html
oss-launch-checklist/: index.html
roadmap/: index.html
scripts/: capture_readme_assets.sh  run_crew.py
search/: search_index.json
security/: index.html
self-host/: index.html
src/: __init__.py
src/app/: main.py  mock_stream.py
src/app/static/css/: style.css
src/app/static/js/: main.js
src/app/templates/: index.html
src/app/utils/: __init__.py  formatters.py
src/app/utils/formatters/: __init__.py  _data_quality.py  (+7 more)
src/core/: __init__.py
src/core/config/: __init__.py  check.py  config.py  data_contracts.py  enums.py  llm.py  models.py
src/core/market/: __init__.py  benchmark.py  fetcher.py  news.py  stock_data.py  storage.py  trends.py
src/core/processing/: __init__.py  download_pipeline.py  processor.py
src/core/validation/: __init__.py  base.py  validation.py
src/crew/: __init__.py  crew.py  facts.py  pipeline.py  schemas.py  structured_output.py  utils.py
src/crew/config/: agents.yaml  tasks.yaml
src/crew/schemas/: SCHEMAS.md  __init__.py  _base.py  _constants.py  _items.py  data_sanity.py  final_report.py  financial_health.py  performance.py  review.py  sentiment.py  valuation.py
src/crew/tools/: __init__.py  calculator.py  csv_reader.py  search.py
stream-api/: index.html
tests/: conftest.py  test_crew.py
tests/app/: test_formatters.py  test_formatters_cards.py  test_routes.py  test_streaming.py
tests/core/: test_download_pipeline.py  test_processor_integration.py  test_storage_contract.py  test_validation.py
tests/crew/: test_calculator.py  test_facts.py  test_pipeline_failure.py  test_schemas.py  test_structured_output.py
